# -

./: .gitignore  README.md  capacitor.config.json  index.html  package-lock.json  package.json  vite.config.js
.claude/skills/: run-app.md
assets/: index-BjSsOXs8.js  index-DyfowoaP.js  index-VZr7juxt.css  index-v3NovIf6.js  index-yTstWXLp.js  web-BDsWkSYU.js  web-C-SKxu0f.js
public/: manifest.json  sw-v2.js  sw.js
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: CategoryPicker.vue  ExpenseFormDialog.vue  ExpenseList.vue  SnakeGame.vue  TetrisGame.vue
src/database/: categories.js  storage.js
src/renderer/: index.html
src/renderer/src/: App.vue  main.js
src/renderer/src/components/: CategoryPicker.vue  ExpenseFormDialog.vue  ExpenseList.vue  SnakeGame.vue  TetrisGame.vue
src/renderer/src/database/: categories.js
src/renderer/src/router/: index.js
src/renderer/src/stores/: expense.js
src/renderer/src/styles/: main.css
src/renderer/src/views/: Games.vue  Home.vue  Statistics.vue
src/router/: index.js
src/stores/: expense.js
src/styles/: main.css
src/views/: CategoryManage.vue  Games.vue  Home.vue  Statistics.vue
