[package]
name = "heima-jizhang"
version = "1.0.0"
description = "轻松记账 - 跨平台桌面记账应用"
authors = ["轻松记账"]
edition = "2021"

[lib]
name = "heima_jizhang_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs-next = "2"
